--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,12 +46,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="film : ${films}">
-            <td th:text="${film.id}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
-            <td th:text="${film.titre}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${film.notation}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${film.resume}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
-            <td th:text="${film.realisateur}" style="border: solid 1px #ccc;">The table body</td>
+        <tr th:each="personnes : ${personne}">
+            <td th:text="${personne.}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
+            <td th:text="${personne.nom}" style="border: solid 1px #ccc">The table body</td>
+            <td th:text="${personne.prenom}" style="border: solid 1px #ccc">The table body</td>
+            <td th:text="${personne.naissance}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
+            <td th:text="${personne.photoPath}" style="border: solid 1px #ccc;">The table body</td>
             <td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>
 
         </tr>
