--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-<div class="card flex-md-row mb-4 shadow-sm h-md-250">
-    <div class="card-body d-flex flex-column align-items-start">
-      <strong class="d-inline-block mb-2 text-primary">World</strong>
-          <h3 class="mb-0">
-              <a href="#" class="text-dark">Featured post</a>
-          </h3>
-          <div class="mb-1 textt muted">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-        <a href="#">Continue reading</a>
+<div class="pos-f-t">
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bd-example">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">accueil <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acteurs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{'/rechercher'}">Ajout d'un film</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    <img style="width: 200px; height: 250px; background-color: darkcyan;" src="" alt="" class="card-img-right flex-auto d-none d-lg-block" data-holder-rendered="true">
-</div>
+<!--<tbody>-->
+<!--<tr th:each="personnes : ${personnes}">
+    <td th:text="${personnes.getId()}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
+    <td th:text="${personnes.getPrenom()}" style="border: solid 1px #ccc">The table body</td>
+    <td th:text="${personnes.getNom()}" style="border: solid 1px #ccc">The table body</td>
+    <td th:text="${personnes.getNaissance()}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
+    <td th:text="${personnes.getAffiche()}" style="border: solid 1px #ccc;">The table body</td>
+    <td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>
+
+</tr>
+</tbody>-->
+</table></div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
