--- a/src/main/resources/templates/person/actor_detail.html
+++ b/src/main/resources/templates/person/actor_detail.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
 <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bd-exemple">
@@ -16,7 +15,7 @@
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{'~/person/actor_list'}">Liste des acteurs</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Liste des Films</a>
                         </li>
                         <li class="nav-item">
@@ -33,41 +32,27 @@
         </button>
     </nav>
 </div>
+<!--fin du nav-->
 
-<div class="container">
-
-    <h2> Liste des Films</h2>
-    <table class="table table-sm">
-        <thead>
-        <tr class="bg-info">
-            <th class="bg-info" style="; color: #fff;">id</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">titre</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">note</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Résumé du film</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Affiche</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Réalisateur</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Fiche complète du film</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="film : ${films}">
-            <td th:text="${film.id}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
-            <td th:text="${film.titre}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${film.notation}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${film.resume}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
-            <td  style="border: solid 1px #ccc;" ><img class="img-thumbnail" th:src="@{'/film/poster/' +${film.affiche}}" alt=""></td>
-            <td th:text="${film.realisateur}" style="border: solid 1px #ccc;">The table body</td>
-            <td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>
-
-        </tr>
-        </tbody>
-    </table>
-
+<body style="background-color: #cccccc">
+<div class="container" style="background-color: white;height: 500px">
+    <!--   <h1>Hello World</h1>-->
+   <div class="bd-example bd-example-images">
+       <figure class="thumbnail" style="padding: 20px;">
+    <img style="width: 161px; height: 217.15px" th:src="@{'/person/photo/'+${personne.prenom + personne.nom}}" class="rounded float-left" alt="...">
+       </figure>
+    </div>
+    <div class="description" style="margin-top: -40px;">
+   <span style="margin-left: 50px;">Id : </span><q th:text="${personne.id}" style="color: #17A2B8"></q><br>
+        <span style="margin-left: 50px;">Prénom : </span><q th:text="${personne.prenom}" style="color: #17A2B8"></q><br>
+        <span style="margin-left: 50px;">Nom : </span><q th:text="${personne.nom}" style="color: #17A2B8"></q><br>
+        <span style="margin-left: 50px;">Date de naissance : </span><q th:text="${personne.naissance}" style="color: #17A2B8"></q>
+    </div>
 </div>
+
+<!-- Liens pour les scripts-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
 </body>
 </html>
