--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,62 +2,153 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+<!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+-->
+    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">
     <title>Cineman</title>
 </head>
 <body>
-<div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bd-example">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">accueil <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Acteurs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{'/rechercher'}">Ajout d'un film</a>
-                        </li>
-                    </ul>
-            </nav>
+
+<div class="ui inverted menu">
+    <a class="active item">
+        Accueil
+    </a>
+    <a class="item">
+        Acteurs
+    </a>
+    <a class="item">
+        Films
+    </a>
+    <a class="item">
+        Ajout de film
+    </a>
+</div>
+<h1 class="ui header">Bienvenue sur le site du cinéma le CINEMAN</h1>
+
+<div class="ui link cards">
+    <div class="card">
+        <div class="image">
+            <img src="/images/avatar2/large/matthew.png">
+        </div>
+        <div class="content">
+            <div class="header">Matt Giampietro</div>
+            <div class="meta">
+                <a>Friends</a>
+            </div>
+            <div class="description">
+                Matthew is an interior designer living in New York.
+            </div>
+        </div>
+        <div class="extra content">
+      <span class="right floated">
+        Joined in 2013
+      </span>
+            <span>
+        <i class="user icon"></i>
+        75 Friends
+      </span>
         </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
+    <div class="card">
+        <div class="image">
+            <img src="/images/avatar2/large/molly.png">
+        </div>
+        <div class="content">
+            <div class="header">Molly</div>
+            <div class="meta">
+                <span class="date">Coworker</span>
+            </div>
+            <div class="description">
+                Molly is a personal assistant living in Paris.
+            </div>
+        </div>
+        <div class="extra content">
+      <span class="right floated">
+        Joined in 2011
+      </span>
+            <span>
+        <i class="user icon"></i>
+        35 Friends
+      </span>
+        </div>
+    </div>
+    <div class="card">
+        <div class="image">
+            <img src="/images/avatar2/large/elyse.png">
+        </div>
+        <div class="content">
+            <div class="header">Elyse</div>
+            <div class="meta">
+                <a>Coworker</a>
+            </div>
+            <div class="description">
+                Elyse is a copywriter working in New York.
+            </div>
+        </div>
+        <div class="extra content">
+      <span class="right floated">
+        Joined in 2014
+      </span>
+            <span>
+        <i class="user icon"></i>
+        151 Friends
+      </span>
+        </div>
+    </div>
 </div>
-<div class="container">
-    <h1 th:text="'Bienvenue '+${annonce}"></h1>
-    <h2> Liste des acteurs</h2>
-    <table class="table table-sm">
-        <thead>
-        <tr class="bg-info">
-            <th class="bg-info" style="; color: #fff;">id</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">titre</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">notation</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">resume</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">realisateur</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Fiche complète du film</th>
+<!--<div class="pos-f-t">-->
+    <!--<div class="collapse" id="navbarToggleExternalContent">-->
+        <!--<div class="bd-example">-->
+            <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+                    <!--<ul class="navbar-nav mr-auto">-->
+                        <!--<li class="nav-item active">-->
+                            <!--<a class="nav-link" href="#">accueil <span class="sr-only">(current)</span></a>-->
+                        <!--</li>-->
+                        <!--<li class="nav-item">-->
+                            <!--<a class="nav-link" href="#">Acteurs</a>-->
+                        <!--</li>-->
+                        <!--<li class="nav-item">-->
+                            <!--<a class="nav-link" th:href="@{'/rechercher'}">Ajout d'un film</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+            <!--</nav>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<nav class="navbar navbar-dark bg-dark">-->
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">-->
+            <!--<span class="navbar-toggler-icon"></span>-->
+        <!--</button>-->
+    <!--</nav>-->
+<!--</div>-->
+<!--<div class="container">-->
+    <!--<h1 th:text="'Bienvenue '+${annonce}"></h1>-->
+    <!--<h2> Liste des acteurs</h2>-->
+    <!--<table class="table table-sm">-->
+        <!--<thead>-->
+        <!--<tr class="bg-info">-->
+            <!--<th class="bg-info" style="; color: #fff;">id</th>-->
+            <!--<th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">titre</th>-->
+            <!--<th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">notation</th>-->
+            <!--<th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">resume</th>-->
+            <!--<th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">realisateur</th>-->
+            <!--<th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Fiche complète du film</th>-->
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="personnes : ${personnes}">
-            <td th:text="${personnes.getId()}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
-            <td th:text="${personnes.getNom()}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${personnes.getPrenom()}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${personnes.getNaissance()}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
-            <td th:text="${personnes.getAffiche()}" style="border: solid 1px #ccc;">The table body</td>
-            <td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<tr th:each="personnes : ${personnes}">-->
+            <!--<td th:text="${personnes.getId()}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>-->
+            <!--<td th:text="${personnes.getNom()}" style="border: solid 1px #ccc">The table body</td>-->
+            <!--<td th:text="${personnes.getPrenom()}" style="border: solid 1px #ccc">The table body</td>-->
+            <!--<td th:text="${personnes.getNaissance()}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>-->
+            <!--<td th:text="${personnes.getAffiche()}" style="border: solid 1px #ccc;">The table body</td>-->
+            <!--<td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>-->
 
-        </tr>
-        </tbody>
-    </table>
-</div>
+        <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
+<!--</div>-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
