modification film_detail

--- a/src/main/resources/templates/film/film_detail.html
+++ b/src/main/resources/templates/film/film_detail.html
@@ -37,17 +37,18 @@
             <span th:text="${film.notation}"></span>
         </div>-->
 <!--    </div>
---><div class="ui internally celled grid" >
+-->
+<div class="ui internally celled grid" >
   <div class="row">
     <div class="three wide column" th:each="film : ${film}">
-      <img th:src="@{'/poster/' +${film.affiche}}">
+      <img th:src="@{'/poster/' +${film.getImage_path()}}">
     </div>
     <div class="ten wide column">
-        <h1 th:text="${film.titre}"></h1>
-        <h3 th:text="${'Note : '+film.notation}"></h3>
-        <h3 th:text="${film.realisateur}"></h3>
+        <h1 th:text="${film.title}"></h1>
+        <h3 th:text="${'Note : '+film.rating}"></h3><!--
+-->        <h3 th:each="genre:${film.getGenreFilm()}" th:text="'Genre : '+${genre.name}"></h3>
         <h2>Résumé du film : </h2>
-      <p th:text="${film.resume}"></p>
+      <p th:text="${film.summary}"></p>
     </div>
 
   </div>
