--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,22 +15,22 @@
 <div class="ui inverted menu">
       </a>
     <a class="item cineman">
-        <i class="film icon"></i>CINEMAN
+      CINEMAN
     </a>
     <a class="active item">
-        Accueil
+       <i class="home icon"></i>   Accueil
     </a>
     <a class="item">
-        Acteurs
+       <i class="users icon"></i> Acteurs
     </a>
     <a class="item">
-        Films
+          <i class="film icon"></i>Films
     </a>
     <a class="item">
-        Ajout de film
+       <i class="edit icon"></i>  Genre
     </a>
 </div>
-<h1 class="ui header">Bienvenue sur le site du cinéma le CINEMAN</h1>
+<!--<h1 class="ui header">Bienvenue sur le site du cinéma le CINEMAN</h1>
 <div class="html ui top attached segment">
 <div class="ui special cards" >
     <div class="card" th:each="films : ${films}">
@@ -60,7 +60,7 @@
     </div>
 
 </div>
-</div>
+</div>-->
 <!--<div class="pos-f-t">-->
     <!--<div class="collapse" id="navbarToggleExternalContent">-->
         <!--<div class="bd-example">-->
