--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -5,9 +5,8 @@
         <title>Title</title>
 </head>
 <body>
-<script th:src="@{'webjars/Semantic-UI/2.4.1/semantic.min.js'}"></script>
-<script th:src="@{'webjars/jquery/3.3.1/src/jquery.js'}"></script>
-<script th:src="@{'webjars/less.js/2.7.3/dist/less.min.js'}"></script>
-<script th:src="@{'/js/' + 'index.js'}"></script>
+<script src="webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+<script src="webjars/jquery/3.3.1/src/jquery.js"></script>
+<script src="webjars/less.js/2.7.3/dist/less.min.js"></script>
 </body>
 </html>
