--- a/src/main/resources/templates/person/actor_list.html
+++ b/src/main/resources/templates/person/actor_list.html
@@ -2,68 +2,36 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Liste des films</title>
+    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">     <title>Liste des films</title>
 </head>
 <body>
-
-<div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bd-exemple">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">Collapsed content
-            <a class="navbar-brand" href="#">CINEMAN</a>
-                <div id="navbarColor01">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                        <a class="nav-link"  href="#">Liste des acteurs</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" th:href="@{'~/film/film_list'}">Liste des Films</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" th:href="@{'~/film/film_form'}">Ajouter un film</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<div class="ui divided items">
+    <div class="item" th:each=" personnes : ${personnes}">
+        <div class="image">
+            <img src="/images/wireframe/image.png">
+        </div>
+        <div class="content">
+           <!-- <a class="header" th:text="personnes.surname">12 Years a Slave</a>-->
+            <div class="meta">
+                <span class="cinema">Union Square 14</span>
+            </div>
+            <div class="description">
+                <p></p>
+            </div>
+            <div class="extra">
+                <div class="ui label">IMAX</div>
+                <div class="ui label"><i class="globe icon"></i> Additional Languages</div>
+            </div>
         </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-</div>
-
-<div class="container">
-
-    <h2> Liste des acteurs</h2>
-    <table class="table table-sm">
-        <thead>
-        <tr class="bg-info">
-            <th class="bg-info" style="; color: #fff;">id</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Nom</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Prénom</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Naissance</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Photos</th>
-            <th class="bg-info" style="border-left: solid 1px #ccc; color: #fff;">Fiche complète de l'acteur</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="personne : ${personnes}">
-            <td th:text="${personne.id}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
-            <td th:text="${personne.nom}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${personne.prenom}" style="border: solid 1px #ccc">The table body</td>
-            <td th:text="${personne.naissance}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
-            <td><img class="img-thumbnail" src="" th:src="@{'/person/photo/'+${personne.prenom+ personne.nom}}" alt=""></td>
-            <td style="border: solid 1px #ccc;"><a th:href="'/person/actor_detail/' +${personne.id}" type="button" class="btn btn-info">Info</a></td>
-
-        </tr>
-        </tbody>
-    </table>
-
-</div>
+    <div class="extra">
+        <div class="ui right floated primary button">
+            Voir l'affiche de l'acteur
+            <i class="right chevron icon"></i>
+        </div>
+    </div>
+    </div>
+</body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
